[metadata]
name = ucorexplain
version = 1.0.0
author = Susana Hahn
author_email = hahnmartinlu@uni-potsdam.de
description = Explanations with 1-pus
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/potassco/ucorexplain

[options]
packages = ucorexplain
install_requires =
    clingo>=5.6.0
    typeguard
    dumbo-asp>=0.2.17
    clingraph
    clingox

[options.extras_require]
dev =
    pylint>=2.12
    pytest>=6.2
test =
    pytest>=6.2
format =
    black
    isort
    autoflake
    
[options.entry_points]
console_scripts =
    ucorexplain = ucorexplain:__main__.main
